--- a/src/app/users-info/users-info.component.html
+++ b/src/app/users-info/users-info.component.html
@@ -32,5 +32,5 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table> <br />
-    <button mat-flat-button color="accent" [routerLink]="['/users']"> Voltar</button>
+    <button mat-flat-button color="accent" [routerLink]="['/users']"> Lista de usuários</button>
 </div>
