--- a/src/app/users-search/users-search.component.html
+++ b/src/app/users-search/users-search.component.html
@@ -1,13 +1,13 @@
 <div class="all">
     <div>
-        <h3>Pesquisar Usuário</h3>
+        <h3>Buscar Usuário</h3>
       </div>
       <form class="example-container" [formGroup]="productForm" (ngSubmit)="getUser(productForm.value)">
         <div class="formu">
         <mat-form-field>
           <input matInput name="cpf" placeholder="CPF" formControlName="cpf">
-        </mat-form-field> <br />
-        <button type="submit" [disabled]="!productForm.valid" mat-button color="default" >Adicionar</button> 
+        </mat-form-field> 
+        <button type="submit" [disabled]="!productForm.valid" mat-button color="default" >Buscar</button> 
       </div>
       </form>
     </div>
